Completed mini project

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,101 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  color: "black";
 }
 
-.App-link {
-  color: #61dafb;
+.homepage {
+  margin-top: 5%;
+  width: 400px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: #f3f3f3;
+  padding: 25px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.operations {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+
+.ticimage {
+  height: 10vh;
+  width: 10vh;
+}
+
+.info {
+  margin-top: 37px;
+  font-weight: 900;
+  font-family: monospace;
+  font-size: 1.3rem;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: column;
+  margin-top: 20px;
+}
+
+.buttons > button {
+  margin-top: 10px;
+  height: 40px;
+  width: 148px;
+  border-radius: 31px;
+  outline: none;
+}
+
+.settings > img {
+  height: 30px;
+  width: 30px;
+  margin-top: 50px;
+}
+
+.radioselect {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: -43%;
+}
+
+.radioselect > input {
+  transform: scale(2);
+  margin-left: 191px;
+  margin-top: 30px;
+  transform: scale(2);
+}
+
+.square {
+  height: 100px;
+  width: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+  border-bottom: 1px solid black;
+}
+
+.giveRight {
+  border-right: 1px solid black;
+}
+
+.score {
+  text-align: center;
+  width: 120px;
+  color: black;
+  padding: 2px;
+  background-color: white;
+  border-radius: 16px;
+}
+
+.activePlayer {
+  color: red;
 }
